fix(frontend): Fixed dismiss button not showing properly

--- a/frontend/src/assets/style.scss
+++ b/frontend/src/assets/style.scss
@@ -1,23 +1,34 @@
 // Custom Bootstrap variables
 
-// Modals
-$modal-content-bg: var(--subtle-color);
-$modal-border-color: var(--border-color);
-$modal-footer-border-color: var(--border-color);
+//Alert
+$alert-padding-y: 0.75rem;
+$alert-padding-x: 1.25rem;
+
+// Buttons
+
 
 // Cards
 $card-bg: var(--subtle-color);
 $card-border-color: var(--border-color);
 
 // Forms
-$form-text-color: var(--input-color);
-
 $form-check-input-bg: var(--subtle-color);
+$form-text-color: var(--text-color);
 
 //Inputs
-$input-border-color: var(--border-color);
 $input-bg: var(--subtle-color);
+$input-border-color: var(--border-color);
+$input-color: var(--text-color);
 $input-disabled-bg: var(--mark-color);
+$input-disabled-color: var(--text-color);
+$input-focus-color: var(--text-color);
+$input-placeholder-color: var(--text-color);
+$input-plaintext-color: var(--text-color);
+
+// Modals
+$modal-border-color: var(--border-color);
+$modal-content-bg: var(--subtle-color);
+$modal-footer-border-color: var(--border-color);
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import "./colours.css";
@@ -213,4 +224,25 @@ input:focus, input:hover {
     color: var(--special-text-color);
     border-color: var(--special-bg-color);
     background-color: var(--special-bg-color);
+}
+
+.btn-secondary {
+    color: var(--text-color);
+    background-color: inherit;
+    border-color: var(--border-color);
+}
+
+.btn-secondary:hover {
+    background-color: var(--special-color);
+}
+
+.close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    padding: .75rem 1.25rem;
+    color: inherit;
+    background-color: inherit;
+    border: 0;
 }
